--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/average-sans": "^5.0.13",
+    "@fontsource/open-sans": "^5.0.28",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/styles": "^4.11.5",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.20",
     "autoprefixer": "^10.4.19",
