--- a/engagez-moi/Dockerfile
+++ b/engagez-moi/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR /app
 COPY /package.json ./
 RUN npm install
 COPY . .
+RUN chown -R node:node /app
+USER node
 EXPOSE 3000
 
 CMD ["npm", "run", "dev"]
