--- a/engagez-moi/package.json
+++ b/engagez-moi/package.json
@@ -9,24 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.20",
+    "@mui/icons-material": "^5.15.21",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.20",
-    "@mui/styles": "^5.15.20",
+    "@mui/material": "^5.15.21",
     "mini-css-extract-plugin": "^2.9.0",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^14.2.0",
+    "next-google-fonts": "^2.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "watchpack": "^2.4.1",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.15",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
     "eslint": "^8",
