--- a/engagez-moi/package.json
+++ b/engagez-moi/package.json
@@ -1,12 +1,13 @@
 {
   "name": "engagez-moi",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
