--- a/engagez-moi/package.json
+++ b/engagez-moi/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "gh-pages -d out"
+    "deploy": "next build && next export && gh-pages -d out"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -35,6 +36,7 @@
     "@typescript-eslint/parser": "^7.14.1",
     "eslint": "^8",
     "eslint-config-next": "^12.3.4",
+    "gh-pages": "^3.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.6.3"
