--- a/engagez-moi/package.json
+++ b/engagez-moi/package.json
@@ -22,6 +22,7 @@
     "mini-css-extract-plugin": "^2.9.0",
     "next": "^14.2.0",
     "next-google-fonts": "^2.2.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.30.2",
