--- a/engagez-moi/package.json
+++ b/engagez-moi/package.json
@@ -20,12 +20,15 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.21",
+    "i18next": "^23.13.0",
     "mini-css-extract-plugin": "^2.9.0",
     "next": "^14.2.0",
     "next-google-fonts": "^2.2.0",
+    "next-i18next": "^15.3.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "watchpack": "^2.4.1",
